# user-agent-lookup-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  user-agent-lookup.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  user-agent-lookup.rockspec  user-agent-lookup_sdk.lua  user-agent-lookup_types.lua
php/: AGENTS.md  CLAUDE.md  (+6 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  useragentlookup_sdk.py  useragentlookup_types.py
py/core/: context.py  control.py  helpers.py  operation.py  result.py
py/entity/: user_agent_entity.py
py/feature/: cache_feature.py  clienttrack_feature.py  idempotency_feature.py  log_feature.py  paging_feature.py  ratelimit_feature.py  rbac_feature.py  retry_feature.py  test_feature.py  timeout_feature.py
py/test/: feature_harness.py  runner.py  test_exists.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_user_agent_direct.py  test_user_agent_entity.py
py/utility/: clean.py  feature_add.py  feature_hook.py  feature_init.py  make_fetch_def.py  make_options.py  make_point.py  make_request.py  make_response.py  make_result.py  make_spec.py  prepare_auth.py  prepare_method.py  prepare_params.py  prepare_query.py  result_basic.py  transform_response.py
(+410 files in other folders)
